--- a/configs/exp.yaml
+++ b/configs/exp.yaml
@@ -1,35 +1,65 @@
 # _run_: true
 
+common:
+  _target_: src.definitions.Common
+  dff: 256
+  dmodel: 64
+  head_norm: true
+  init_scale: 0.1
+  init_type: truncated_normal_fixed
+  model_type: gpt
+  sequence_length: 32
+  vocab_size: 50257
+  
 model:
   _target_: src.core.model.LLM
-  common:
-    _target_: src.definitions.Common
-    dff: 256
-    dmodel: 64
-    head_norm: true
-    init_scale: 0.1
-    init_type: truncated_normal_fixed
-    model_type: gpt
-    sequence_length: 32
-    vocab_size: 50257
+
   embedding:
     _target_: src.core.model.get_vanilla_embedding
-    common: ${model.common}
-  tower_config:
-    _target_: src.definitions.TowerConfig
-    block_config:
-      _target_: src.definitions.BlockConfig
-      attention:
-        _target_: src.definitions.AttentionConfig
-        mode: vanilla
-        n_heads: 2
-      feedforward:
-        _target_: src.definitions.FeedForwardConfig
-        mode: vanilla
-      norm_class_mode: layer_norm
-      residual_mode: pre_norm
-    mode: same
+    vocab_size: ${common.vocab_size}
+    dmodel: ${common.dmodel}
+    init_type: ${common.init_type}
+    init_scale: ${common.init_scale}
+    sequence_length: ${common.sequence_length}
+
+  tower:
+    _target_: src.core.model.TransformerTower
     n_blocks: 2
+    block_fn:
+      _target_: src.core.model.TransformerBlock
+      _partial_: true
+      residual_fn:
+        _target_: src.core.model.PreNormBlock
+        _partial_: true
+        dmodel: ${common.dmodel}
+        norm_class:
+          _target_: src.core.model.LayerNorm
+          _partial_: true
+
+      attention_fn:
+        _target_: src.core.model.Attention
+        _partial_: true
+        dmodel: ${common.dmodel}
+        heads: 2
+        causal: true
+        init_scale: ${common.init_scale}
+        init_type: ${common.init_type}
+
+      ff_layer_fn:
+        _target_: src.core.model.FeedForward
+        _partial_: true
+        dmodel: ${common.dmodel}
+        dff: ${common.dff}
+        init_scale: ${common.init_scale}
+        init_type: ${common.init_type}
+
+  head:
+    _target_: src.core.model.PredictionHead
+    embedding_dim: ${common.dmodel}
+    output_size: ${common.vocab_size}
+    init_type: ${common.init_type}
+    init_scale: ${common.init_scale}
+    use_layer_norm: ${common.head_norm}
 
 trainer:
   _partial_: true
@@ -85,19 +115,17 @@ trainer:
     use_new_sampling_method: true
     world_size_independent: false
 
-
   distributed:
     fsdp:
       mixed_precision:
         dtype: bfloat16
         ignored_classes:
-        - LayerNorm
-        - AttentionMechanism
+          - LayerNorm
+          - AttentionMechanism
       modules_to_wrap:
-      - TransformerBlock
-      - EmbeddingLayer
-      - PredictionHead
-
+        - TransformerBlock
+        - EmbeddingLayer
+        - PredictionHead
 
 infrastructure:
   slurm:
@@ -109,10 +137,10 @@ infrastructure:
     partition: h100
     time: "0-1:00:00"
     ntasks-per-node: 2
-  
+
   venv_path: $HOME/nano/.venv/bin/activate # Change me!
   experiment_prepare_venv_path: ${infrastructure.venv_path}
-  
+
   cemetery_experiments_dir: ~/llmrandom_cemetery
 
   metric_logger:
@@ -120,12 +148,10 @@ infrastructure:
     heavy_metrics_calculation_interval: 100
     name: test
     new_neptune_job: false
-    project_name: pmtest/llm-random
+    # project_name: pmtest/llm-random
+    project_name: crewtool/mojtestproject
     tags:
-    - nano
-    - k8
-    - merge
-    - final_decay
+      - test
     type: neptune
 
   git:
