--- a/configs/llama_config_hehe.yaml
+++ b/configs/llama_config_hehe.yaml
@@ -3,14 +3,14 @@
 common:
   _target_: src.definitions.Common
   dff: 8192
-  dmodel: 3072
+  dmodel: 2048
   head_norm: true
   init_scale: 0.1
   init_type: truncated_normal_fixed
   model_type: gpt
-  sequence_length: 100
+  sequence_length: 32
   vocab_size: 128256
-
+  
 model:
   _target_: src.core.model.LLM
 
@@ -23,7 +23,7 @@ model:
 
   tower:
     _target_: src.core.model.TransformerTower
-    n_blocks: 28
+    n_blocks: 16
     block_fn:
       _target_: src.core.model.TransformerBlock
       _partial_: true
@@ -40,7 +40,7 @@ model:
         _target_: src.core.llama.LlamaAttention
         _partial_: true
         dmodel: ${common.dmodel}
-        q_heads: 24
+        q_heads: 32
         kv_heads: 8
         seq_len: ${common.sequence_length}
         causal: true
@@ -68,15 +68,20 @@ trainer:
   _target_: src.core.trainer.Trainer
 
   checkpoint:
-    save:
-      interval: 12500
-      model_checkpoint_filename: __model_optim_scheduler__.pt
-      training_state_filename: __training_state__.pt
-      path: checkpoints # Change me!
+   save:
+    interval: 12500
+    model_checkpoint_filename: __model_optim_scheduler__.pt
+    training_state_filename: __training_state__.pt
+    # path: checkpoints
+    path: "/storage_nvme_1/crewtool/checkpoints/llama2"
 
-    load:
-      type: huggingface
-      path: "meta-llama/Llama-3.2-3B"
+   load:
+    type: "normal"
+    path:  ${trainer.checkpoint.save.path}
+    model_checkpoint_filename: ${trainer.checkpoint.save.model_checkpoint_filename}
+    training_state_filename: ${trainer.checkpoint.save.training_state_filename}
+
+
 
   eval_interval: 100
   n_eval_steps: 5
@@ -120,7 +125,7 @@ trainer:
     use_new_sampling_method: true
     world_size_independent: false
 
-  distributed:
+  distributed: # null
     fsdp:
       mixed_precision:
         dtype: bfloat16
