--- a/configs/clusters/entropia.yaml
+++ b/configs/clusters/entropia.yaml
@@ -1,5 +1,5 @@
 # @package _global_
-cluster_name: "entropia"
+cluster_name: "entropy"
 
 
 trainer_factory:
@@ -10,6 +10,6 @@ trainer_factory:
     dataset_path: "/storage_nvme_1/llm-random/datasets/c4/validation"
 
 slurm:
-  partition: "h100"
+  partition: "h100" # TODO infrastructure/slurm/partition ?
 
 cemetery_experiments_dir: "~/llmrandom_cemetery"
