--- a/configs/_trainer/llama.yaml
+++ b/configs/_trainer/llama.yaml
@@ -22,7 +22,7 @@ trainer:
         dtype: bfloat16
         ignored_classes:
           - LayerNorm
-          - AttentionMechanism
+          - LlamaAttention
       modules_to_wrap:
         - TransformerBlock
         - EmbeddingLayer
