--- a/configs/_cluster/helios_4.yaml
+++ b/configs/_cluster/helios_4.yaml
@@ -18,3 +18,10 @@ infrastructure:
   git:
     remote_name: cemetery
     remote_url: git@github.com:llm-random/llm-random-cemetery.git
+
+switch:
+  trainer:
+    train_dataloader:
+      dataset_path_c4: "/net/scratch/hscra/plgrid/plgmaciejpioro/c4/train" # helios
+    eval_dataloader:
+      dataset_path_c4: "/net/scratch/hscra/plgrid/plgmaciejpioro/c4/validation" # helios
