--- a/configs/_dataset/c4.yaml
+++ b/configs/_dataset/c4.yaml
@@ -3,8 +3,9 @@
 trainer:
   train_dataloader:
     _target_: src.core.datasets.get_dataloader
-    dataset_path: "/storage_nvme_1/llm-random/datasets/c4/train" # entropy
+    # dataset_path: "/storage_nvme_1/llm-random/datasets/c4/train" # entropy
     # dataset_path: "/net/scratch/hscra/plgrid/plgmaciejpioro/c4/train" # helios
+    dataset_path: ${switch.trainer.train_dataloader.dataset_path_c4}
     dataset_split: train
     dataset_type: c4
     num_workers: 12
@@ -17,8 +18,9 @@ trainer:
 
   eval_dataloader:
     _target_: src.core.datasets.get_dataloader
-    dataset_path: "/storage_nvme_1/llm-random/datasets/c4/validation" # entropy
+    # dataset_path: "/storage_nvme_1/llm-random/datasets/c4/validation" # entropy
     # dataset_path: "/net/scratch/hscra/plgrid/plgmaciejpioro/c4/validation" # helios
+    dataset_path: ${switch.trainer.eval_dataloader.dataset_path_c4}
     dataset_split: validation
     dataset_type: c4
     num_workers: 12
