--- a/configs/save_llama_in_nano.yaml
+++ b/configs/save_llama_in_nano.yaml
@@ -99,6 +99,8 @@ trainer:
     dataset_path: "/storage_nvme_1/llm-random/datasets/c4/train"
     dataset_split: train
     dataset_type: c4
+    tokenize_fn: 
+      _target_: src.core.datasets.llama_tokenize_fn
     num_workers: 0 # Change me!
     seed: 20001
     sequence_length: 32
@@ -112,6 +114,8 @@ trainer:
     dataset_path: "/storage_nvme_1/llm-random/datasets/c4/validation"
     dataset_split: validation
     dataset_type: c4
+    tokenize_fn: 
+      _target_: src.core.datasets.llama_tokenize_fn
     num_workers: 0 # Change me!
     seed: 123
     sequence_length: 32
