--- a/configs/llama_projected.yaml
+++ b/configs/llama_projected.yaml
@@ -145,6 +145,8 @@ trainer:
     dataset_path: data
     dataset_split: train
     dataset_type: c4
+    tokenize_fn: 
+      _target_: src.core.datasets.llama_tokenize_fn
     num_workers: 0 # Change me!
     seed: 20001
     sequence_length: 32
@@ -158,6 +160,8 @@ trainer:
     dataset_path: data_eval
     dataset_split: validation
     dataset_type: c4
+    tokenize_fn: 
+      _target_: src.core.datasets.llama_tokenize_fn
     num_workers: 0 # Change me!
     seed: 123
     sequence_length: 32
