--- a/configs/_misc/default.yaml
+++ b/configs/_misc/default.yaml
@@ -2,6 +2,7 @@
 infrastructure:
   metric_logger:
     _target_: src.definitions.MetricLoggerConfig
+    project_name: pmtest/llm-random
     heavy_metrics_calculation_interval: 100
     new_neptune_job: true
     type: neptune
