--- a/configs/fine_tune_llama_hf.yaml
+++ b/configs/fine_tune_llama_hf.yaml
@@ -18,9 +18,8 @@ trainer:
 infrastructure:
   metric_logger:
     name: test
-    project_name: pmtest/llm-random
     tags:
       - pc
       - nano
       - test_configs
-      - final
+      - fine_tune_hf
