--- a/configs/llama_projected.yaml
+++ b/configs/llama_projected.yaml
@@ -1,15 +1,15 @@
 common:
   _target_: src.definitions.Common
-  dff: 192
-  dmodel: 48
+  dff: 486
+  dmodel: 96
   head_norm: true
   init_scale: 0.1
   init_type: truncated_normal_fixed
   model_type: gpt
   sequence_length: 32
-  vocab_size: 50257
-  base_dmodel: 64
-  base_dff: 256
+  vocab_size: 128256
+  base_dmodel: 128
+  base_dff: 512
   
 model:
   _target_: src.projected_compression.model.LLM
@@ -26,7 +26,7 @@ model:
 
   encoder:
     _target_: src.projected_compression.model.TransformerEncoder
-    n_blocks: 4
+    n_blocks: 2
     block_fn:
       _target_: src.projected_compression.model.TransformerBlock
       _partial_: true
@@ -42,7 +42,7 @@ model:
         _partial_: true
         dmodel: ${common.base_dmodel}
         q_heads: 4
-        kv_heads: 4
+        kv_heads: 2
         seq_len: ${common.sequence_length}
         q_proj_fn:
           _target_: src.projected_compression.model.ProjectedLinear
@@ -58,7 +58,7 @@ model:
           result_in_features: ${common.dmodel} 
           result_out_features: null
           base_in_features: ${common.base_dmodel}
-          base_out_features: ${eval:'${model.encoder.block_fn.attention_fn.q_heads} // ${model.encoder.block_fn.attention_fn.kv_heads} * ${common.base_dmodel}'}
+          base_out_features: ${eval:'${model.encoder.block_fn.attention_fn.kv_heads} * (${common.base_dmodel} // ${model.encoder.block_fn.attention_fn.q_heads})'}
 
         v_proj_fn: ${model.encoder.block_fn.attention_fn.k_proj_fn}
 
@@ -74,10 +74,9 @@ model:
         rope_scale_freqs: false
 
 
-
       ff_layer_fn:
-        _target_: src.projected_compression.model.FeedForward
-        _partial_: true
+        _target_: src.projected_compression.model.ProjectedLlamaFeedForward
+        _partial_: true 
         ff_pre_act_fn:
           _target_: src.projected_compression.model.ProjectedLinear
           _partial_: true
@@ -92,7 +91,7 @@ model:
           result_out_features: ${common.dmodel} 
           base_in_features: ${common.base_dff}
           base_out_features: ${common.base_dmodel}
-
+        gate_fn: ${model.encoder.block_fn.ff_layer_fn.ff_pre_act_fn}
 
   head:
     _target_: src.projected_compression.model.TransformerHead
@@ -122,8 +121,8 @@ trainer:
       path: checkpoints # Change me!
 
     load:
-      type: "llm-random"
-      path: "path_to_ckpt" # Change me!
+      type: huggingface
+      path: "" # Change me!
 
   eval_interval: 100
   n_eval_steps: 5
@@ -147,7 +146,7 @@ trainer:
     dataset_split: train
     dataset_type: c4
     tokenize_fn: 
-      _target_: src.core.datasets.gpt2_tokenize_fn
+      _target_: src.core.datasets.llama_tokenize_fn
     num_workers: 0 # Change me!
     seed: 20001
     sequence_length: 32
@@ -162,7 +161,7 @@ trainer:
     dataset_split: validation
     dataset_type: c4
     tokenize_fn: 
-      _target_: src.core.datasets.gpt2_tokenize_fn
+      _target_: src.core.datasets.llama_tokenize_fn
     num_workers: 0 # Change me!
     seed: 123
     sequence_length: 32
@@ -209,7 +208,7 @@ infrastructure:
     _target_: src.definitions.MetricLoggerConfig
     heavy_metrics_calculation_interval: 100
     name: test
-    # new_neptune_job: false
+    new_neptune_job: true
     project_name: pmtest/llm-random
     tags:
       - test
@@ -223,3 +222,4 @@ infrastructure:
   server: entropia
 
   generated_configs_path: generated_configs
+
