--- a/configs/_model/llama_3_1.yaml
+++ b/configs/_model/llama_3_1.yaml
@@ -6,7 +6,7 @@ common:
   head_norm: true
   init_scale: 0.1
   init_type: truncated_normal_fixed
-  model_type: gpt #TODO correct?
+  model_type: gpt
   sequence_length: 512
   vocab_size: 128256
   
