--- a/configs/exp_h100_2gpu.yaml
+++ b/configs/exp_h100_2gpu.yaml
@@ -1,4 +1,3 @@
-# _run_: true
 
 common:
   _target_: src.definitions.Common
@@ -163,6 +162,6 @@ infrastructure:
     remote_name: cemetery
     remote_url: git@github.com:llm-random/llm-random-cemetery.git
 
-  server: entropia
+  server: entropy
 
   generated_configs_path: generated_configs
