Revert "Base configs+ (#20)"
This reverts commit 25f653412b16e040941fbc344299e0a29ad67220.

--- a/configs/exp_h100_2gpu.yaml
+++ b/configs/exp_h100_2gpu.yaml
@@ -1,3 +1,4 @@
+# _run_: true
 
 common:
   _target_: src.definitions.Common
@@ -162,6 +163,6 @@ infrastructure:
     remote_name: cemetery
     remote_url: git@github.com:llm-random/llm-random-cemetery.git
 
-  server: entropy
+  server: entropia
 
   generated_configs_path: generated_configs
