--- a/configs/_cluster/local.yaml
+++ b/configs/_cluster/local.yaml
@@ -1,29 +1,13 @@
-
 _run_: true
 
 infrastructure:
   server: local
-  slurm:
-    cpus-per-task: 16
-    gres: gpu:1
-    job-name: test
-    mem_per_gpu: 90G
-    nodes: 1
-    partition: h100
-    time: "0-05:00:00"
-    ntasks-per-node: 1
+  slurm: none
 
   venv_path: none
-  experiment_prepare_venv_path: ${infrastructure.venv_path}
-  cemetery_experiments_dir: ~/llmrandom_cemetery
+  experiment_prepare_venv_path: none
+  cemetery_experiments_dir: none
 
   git:
     remote_name: cemetery
     remote_url: git@github.com:llm-random/llm-random-cemetery.git
-
-switch:
-  trainer:
-    train_dataloader:
-      dataset_path_c4: "/storage_nvme_1/llm-random/datasets/c4/train" # entropy
-    eval_dataloader:
-      dataset_path_c4: "/storage_nvme_1/llm-random/datasets/c4/validation" # entropy
