--- a/configs/_dataset/c4.yaml
+++ b/configs/_dataset/c4.yaml
@@ -12,7 +12,7 @@ trainer:
     shuffle: true
     total_batch_size: ${common.sequence_length}
     use_new_sampling_method: true
-    world_size_independent: false
+    world_size_independent: true
     tokenize_fn:
       _target_: src.core.datasets.llama_tokenize_fn
 
@@ -27,6 +27,6 @@ trainer:
     shuffle: true
     total_batch_size: ${common.sequence_length}
     use_new_sampling_method: true
-    world_size_independent: false
+    world_size_independent: true
     tokenize_fn:
       _target_: src.core.datasets.llama_tokenize_fn
