--- a/configs/_trainer/llama.yaml
+++ b/configs/_trainer/llama.yaml
@@ -14,24 +14,13 @@ trainer:
     _partial_: true
     _target_: src.core.schedulers.get_cosine_scheduler_with_warmup
     final_lr_fraction: 0.1
-    warmup_steps: 500
+    # warmup_steps: 500
+    # warmup_steps: ${eval:'int((${trainer.n_steps} * 0.01)'}
+    warmup_steps: 40
 
   distributed:
-    # fsdp: # old V and old nomenclature
-    #   mixed_precision:
-    #     dtype: bfloat16
-    #     ignored_classes:
-    #       - LayerNorm
-    #       - LlamaAttention
-    #   modules_to_wrap:
-    #     - TransformerBlock
-    #     - EmbeddingLayer
-    #     - PredictionHead
     fsdp2:
       modules_to_shard: 
-        # - src.projected_compression.model.ProjectedEmbedding
-        # - src.projected_compression.model.TransformerBlock
-        # - src.projected_compression.model.TransformerHead
         - ${model.embedding._target_}
         - ${model.encoder.block_fn._target_}
         - ${model.head._target_}
