--- a/configs/pretrain_tiny_llama.yaml
+++ b/configs/pretrain_tiny_llama.yaml
@@ -1,3 +1,5 @@
+# creates < 1GB checkpoint
+
 defaults:
   - _cluster@_here_: local
   - _model@_here_: llama_3_1
@@ -12,7 +14,7 @@ trainer:
 
   checkpoint:
    save:
-    path: mastest_tiny_llama
+    path: checkpoint
 
 infrastructure:
   metric_logger:
